<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalculatorActivity">


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:id ="@+id/CalculatorTopAppBar"
                style="@style/Widget.MaterialComponents.Toolbar.Primary"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:backgroundTint="@color/Primary_color"
                app:navigationIcon="?attr/actionModeCloseDrawable"
                app:title="@string/calculator" />

        </com.google.android.material.appbar.AppBarLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input"
        app:layout_constraintVertical_bias="0.95">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.widget.Button
                android:id="@+id/clear_btn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:backgroundTint="#0bc9fb"
                android:text="@string/clear"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                tools:ignore="TextContrastCheck" />

            <android.widget.Button
                android:id="@+id/parentheses_btn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:backgroundTint="#0bc9fb"
                android:text="@string/parentheses"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                tools:ignore="TextContrastCheck" />

            <android.widget.Button
                android:id="@+id/percent_btn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:backgroundTint="#0bc9fb"
                android:text="@string/percent"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                tools:ignore="TextContrastCheck" />

            <android.widget.Button
                android:id="@+id/divide_btn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:backgroundTint="#0578f6"
                android:text="@string/divide"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.widget.Button
                android:id="@+id/seven_btn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:text="@string/seven"
                android:textColor="#000000"
                android:textSize="24sp" />

            <android.widget.Button
                android:id="@+id/eight_btn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:text="@string/eight"
                android:textColor="#000000"
                android:textSize="24sp" />

            <android.widget.Button
                android:id="@+id/nine_btn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:text="@string/nine"
                android:textColor="#000000"
                android:textSize="24sp" />

            <android.widget.Button
                android:id="@+id/multiply_btn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:backgroundTint="#0578f6"
                android:text="@string/multiply"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.widget.Button
                android:id="@+id/four_btn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:text="@string/four"
                android:textColor="#000000"
                android:textSize="24sp" />

            <android.widget.Button
                android:id="@+id/five_btn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:text="@string/five"
                android:textColor="#000000"
                android:textSize="24sp" />

            <android.widget.Button
                android:id="@+id/six_btn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:text="@string/six"
                android:textColor="#000000"
                android:textSize="24sp" />

            <android.widget.Button
                android:id="@+id/add_btn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:backgroundTint="#0578f6"
                android:text="@string/add"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.widget.Button
                android:id="@+id/one_btn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:text="@string/one"
                android:textColor="#000000"
                android:textSize="24sp" />

            <android.widget.Button
                android:id="@+id/two_btn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:text="@string/two"
                android:textColor="#000000"
                android:textSize="24sp" />

            <android.widget.Button
                android:id="@+id/three_btn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:text="@string/three"
                android:textColor="#000000"
                android:textSize="24sp" />

            <android.widget.Button
                android:id="@+id/subtract_btn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:backgroundTint="#0578f6"
                android:text="@string/subtract"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.widget.Button
                android:id="@+id/plus_minus_btn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:text="@string/plusMinus"
                android:textColor="#000000"
                android:textSize="24sp" />

            <android.widget.Button
                android:id="@+id/zero_btn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:text="@string/zero"
                android:textColor="#000000"
                android:textSize="24sp" />

            <android.widget.Button
                android:id="@+id/point_btn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:text="@string/point"
                android:textColor="#000000"
                android:textSize="24sp" />

            <android.widget.Button
                android:id="@+id/equal_btn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:backgroundTint="#0578f6"
                android:text="@string/equals"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />
        </TableRow>

    </TableLayout>

    <EditText
        android:id="@+id/input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="false"
        android:inputType="none"
        android:text="@string/display"
        android:textAlignment="textEnd"
        android:backgroundTint="@color/Primary_color"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/calculator_guideline"
        tools:ignore="LabelFor" />

    <ImageButton
        android:id="@+id/backspace_btn"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:background="@drawable/circle"
        android:backgroundTint="#cacaca"
        android:contentDescription="@string/backspace"
        android:text="@string/backspace"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/backspace"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/calculator_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2"
        app:layout_constraintGuide_begin="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>