<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".OtpAuthenticationActivity">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:src="@drawable/logo_tra"
        android:contentDescription="@string/owners">

    </ImageView>


    <TextView
        android:id="@+id/text_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:fontFamily="@font/raleway"
        android:padding="20dp"
        android:text="@string/enter_the_otp_which_you_received"
        android:textAlignment="center"
        android:textColor="#6e6e6e"
        android:textSize="20sp"
        android:textStyle="bold">

    </TextView>


    <EditText
        android:id="@+id/get_otp"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_below="@id/text_heading"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="120dp"
        android:layout_marginRight="120dp"
        android:autofillHints=""
        android:hint="@string/enter_the_otp_here"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="#757575">

    </EditText>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/didn_t_receive_change_your_number"
        android:id="@+id/change_number"
        android:layout_below="@id/get_otp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginTop="15dp">

    </TextView>

    <android.widget.Button
        android:id="@+id/verify_otp"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_below="@id/change_number"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@color/Primary_color"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:text="@string/verify_otp"
        android:textColor="@color/white">

    </android.widget.Button>


    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/verify_otp"
        android:id="@+id/progress_bar_of_otp_auth"
        android:visibility="invisible"
        android:layout_marginTop="30dp">

    </ProgressBar>




</RelativeLayout>