<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="300dp"
        android:layout_height="83dp"
        android:layout_marginTop="20dp"
        android:text="@string/title"
        android:textColor="#494848"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/register_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.068" />

    <TextView
        android:id="@+id/title2"
        android:layout_width="274dp"
        android:layout_height="28dp"
        android:layout_marginTop="8dp"
        android:text="@string/title2"
        android:textColor="#494848"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/register_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.416"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/register_btn"
        android:layout_width="117dp"
        android:layout_height="48dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="#004A87"
        android:text="@string/register"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/login_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="114dp"
        android:layout_height="49dp"
        android:layout_marginBottom="44dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/login"
        android:textColor="#000000"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>