<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SetProfileActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/get_user_image"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/raleway"
        android:text="@string/save_your_profile"
        android:textColor="@color/Primary_color"
        android:textSize="30sp"
        android:textStyle="bold">

    </TextView>



    <androidx.cardview.widget.CardView
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_above="@+id/get_user_name"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="80dp"
        android:id="@+id/get_user_image"
        android:layout_centerHorizontal="true"
        app:cardCornerRadius="130dp">


        <ImageView
            android:id="@+id/get_user_image_in_image_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/owners"
            android:scaleType="centerCrop"
            android:src="@drawable/default_profile"
            tools:ignore="ImageContrastCheck">

        </ImageView>



    </androidx.cardview.widget.CardView>


    <EditText
        android:id="@+id/get_user_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:autofillHints=""
        android:hint="@string/enter_your_name"
        android:inputType="textCapWords"
        android:textColorHint="#757575">

    </EditText>

    <android.widget.Button
        android:id="@+id/saveProfile"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_below="@id/get_user_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"

        android:background="@color/Primary_color"
        android:text="@string/save_profile"

        android:textColor="@color/white">

    </android.widget.Button>


    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/saveProfile"
        android:id="@+id/progress_bar_of_set_profile"
        android:visibility="invisible"
        android:layout_marginTop="30dp">

    </ProgressBar>







</RelativeLayout>